<resources>
    <string name="app_name">Climbing Trainer</string>

    <string name="action_settings">Settings</string>
    <string name="fragmentName">This is a Fragment</string>
    <string name="climb">Climb</string>
    <string name="Hangboard">Hangboard</string>
    <string name="Campus">Campus</string>
    <string name="indoorClimbingTitle">Indoor climbing</string>
    <string name="add">add</string>
    <string name="grade">Grade:</string>
    <string name="date">Date:</string>
    <string name="id">ID:</string>
    <string name="add_campus">Add campus</string>
    <string name="add_hang">Start</string>
    <string name="projecting">projecting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
