<?xml version="1.0" encoding="utf-8"?>
<com.flipboard.bottomsheet.BottomSheetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainActivity_BottomSheet">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/mainActivity_DrawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/mainActivity_CoordinatorLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent" android:fitsSystemWindows="true"
            tools:context=".mainview.MainActivity">

            <android.support.design.widget.AppBarLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/mainActivity_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>

                <android.support.design.widget.TabLayout
                    android:id="@+id/mainActivity_tabLayout"
                    style="@style/CustomTabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabMode="scrollable"/>
            </android.support.design.widget.AppBarLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/mainActivity_ViewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <me.climbingti.climbingtrainer.common.view.Fab
                android:id="@+id/mainActivity_floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                android:src="@drawable/ic_add_white_24dp"/>

            <com.gordonwong.materialsheetfab.DimOverlayFrameLayout
                android:id="@+id/mainActivity_dimOverlayFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <io.codetail.widget.RevealLinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|end"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/mainActivity_cardView_morphedFab"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="16dp">

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/mainActivity_textView_morphedFab_climbTitle"
                            android:padding="16dp"
                            android:layout_width="210dp"
                            android:layout_height="wrap_content"
                            android:text="@string/climb"
                            android:textSize="16sp"
                            android:drawableLeft="@drawable/ic_add_white_24dp"
                            android:drawableStart="@drawable/ic_add_white_24dp"
                            android:drawablePadding="24dp"
                            android:clickable="true"/>

                        <TextView
                            android:id="@+id/mainActivity_textView_morphedFab_hangboardTitle"
                            android:padding="16dp"
                            android:layout_width="210dp"
                            android:layout_height="wrap_content"
                            android:text="@string/Hangboard"
                            android:textSize="16sp"
                            android:drawableLeft="@drawable/ic_add_white_24dp"
                            android:drawableStart="@drawable/ic_add_white_24dp"
                            android:drawablePadding="24dp"
                            android:clickable="true" />

                        <TextView
                            android:id="@+id/mainActivity_textView_morphedFab_campusTitle"
                            android:padding="16dp"
                            android:layout_width="210dp"
                            android:layout_height="wrap_content"
                            android:text="@string/Campus"
                            android:textSize="16sp"
                            android:drawableLeft="@drawable/ic_add_white_24dp"
                            android:drawableStart="@drawable/ic_add_white_24dp"
                            android:drawablePadding="24dp"
                            android:clickable="true" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </io.codetail.widget.RevealLinearLayout>
        </android.support.design.widget.CoordinatorLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/mainActivity_NavigationView"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            app:headerLayout="@layout/navigation_drawer_header"
            app:menu="@menu/drawer"/>
    </android.support.v4.widget.DrawerLayout>
</com.flipboard.bottomsheet.BottomSheetLayout>